# preco-cacau-sul-bahia

./: .env.example  .gitignore  .mcp.json  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  daily-collection.yml  data-report.yml
configs/: locations.yaml  quality.yaml  sources.yaml
data/reports/: analise_inicial.md
migrations/: 001_initial.sql  002_harden_data_api.sql  003_temporality_and_source_status.sql  004_seed_source_status.sql
notebooks/: 01_analise_integrada_cacau.ipynb
scripts/: sync_collection_issues.py
src/cocoa_data/: __init__.py  __main__.py  cli.py  models.py  pipeline.py  settings.py
src/cocoa_data/analysis/: __init__.py  dataset.py  report.py
src/cocoa_data/collectors/: __init__.py  base.py  bcb.py  conab.py  ibge.py  icco.py  ice.py  seagri.py  weather.py
src/cocoa_data/database/: __init__.py  repository.py  rest_repository.py
src/cocoa_data/modeling/: __init__.py  readiness.py
src/cocoa_data/quality/: __init__.py  checks.py
tests/: test_analysis.py  test_collection_issues.py  test_collectors.py  test_model_readiness.py  test_models.py  test_pipeline.py  test_project_contracts.py  test_quality.py  test_rest_repository.py
web/: .env.example  package-lock.json  package.json
web/app/: layout.tsx  page.tsx  styles.css
web/app/api/dados.csv/: route.ts
web/app/fontes/: page.tsx
web/app/historico/: page.tsx
web/app/metodologia/: page.tsx
web/components/: BrandMark.tsx  HistoryChart.tsx
web/lib/data/: cocoa.ts
web/lib/supabase/: client.ts  config.ts  database.types.ts  proxy.ts  server.ts
(+1 files in other folders)
