[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cocoa-data"
version = "0.1.0"
description = "Coleta e análise automática do mercado de cacau do Sul da Bahia"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "lxml>=5.2",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "plotly>=5.24",
  "polars>=1.8",
  "psycopg[binary]>=3.2",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
analysis = [
  "ipykernel>=6.29",
  "nbclient>=0.10",
  "nbconvert>=7.16",
  "nbformat>=5.10",
]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.7",
]

[project.scripts]
cocoa-data = "cocoa_data.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cocoa_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
